--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1><span id='greeting'></span> I'm Olivia Farino</h1>
         <p> Welcome to my portfolio</p>
-        <img src="portfolio.JPG" alt="Portfolio Picture" width="200">
+        <img src="assets/IMG_2414.jpeg" alt="Portfolio Picture" width="200"/>
     </header>
 
     <section>
