--- a/index.html
+++ b/index.html
@@ -53,12 +53,6 @@
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
                 </div>
             </div>
-            <div class="hero-image">
-                <div class="image-container">
-                    <img src="assets/IMG_2414.jpeg" alt="Olivia Farino" class="profile-img"/>
-                    <div class="image-overlay"></div>
-                </div>
-            </div>
         </div>
         <div class="scroll-indicator">
             <i class="fas fa-chevron-down"></i>
@@ -172,8 +166,8 @@
                         <span>Level Design</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                        <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                        <a href="YOUR_WEBGL_GAME_URL_HERE" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="YOUR_GITHUB_REPO_URL_HERE" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="project-cards">
@@ -251,7 +245,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Let's Create Something Amazing</h2>
+            <h2 class="section-title">Contact Me</h2>
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
