--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <i class="fas fa-users"></i>
                             <div>
                                 <h4>Campus Involvement</h4>
-                                <p>ACM Club Member<br>Gator AI Club<br>AI Club - Connections Committee</p>
+                                <p>ACM Club Member<br>Gator AI Club</p>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,6 @@
                     <div class="skill-items">
                         <span class="skill-tag">ACM Member</span>
                         <span class="skill-tag">Gator AI Club</span>
-                        <span class="skill-tag">AI Club - Connections Committee</span>
                         <span class="skill-tag">AI Certificate (In Progress)</span>
                         <span class="skill-tag">Web Development</span>
                         <span class="skill-tag">Problem Solving</span>
@@ -149,7 +148,6 @@
             <h2 class="section-title">Featured Projects</h2>
             <p class="section-subtitle">Here are some of my favorite projects that showcase my skills</p>
             <div class="projects-container">
-                <!-- Unity Platformer Game - Commented out for now
                 <div class="project-cards">
                     <div class="project-icon">
                         <i class="fas fa-running"></i>
@@ -167,7 +165,6 @@
                         <a href="YOUR_GITHUB_REPO_URL_HERE" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
-                -->
                 <div class="project-cards">
                     <div class="project-icon">
                         <i class="fas fa-tint"></i>
@@ -180,25 +177,11 @@
                         <span>Flask</span>
                         <span>OpenAI API</span>
                         <span>JavaScript</span>
+                        <span>Render</span>
                     </div>
                     <div class="project-links">
                         <a href="https://drain-3m4t.onrender.com/progress" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                         <a href="https://github.com/bcsanadi/drAIn" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-                <div class="project-cards">
-                    <div class="project-icon">
-                        <i class="fas fa-palette"></i>
-                    </div>
-                    <h3>pArty - Poetry to Generative Art</h3>
-                    <p><em>In Progress</em> - A generative art system that transforms poetry into animated abstract visuals. Uses NLP to analyze sentiment and emotional intensity of each line, then maps these features to color, motion, and form in Processing.</p>
-                    <div class="project-tech">
-                        <span>Python</span>
-                        <span>NLP</span>
-                        <span>Generative Art</span>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://github.com/ofarino/party" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="project-cards">
@@ -214,7 +197,7 @@
                     </div>
                     <div class="project-links">
                         <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                        <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Scrappy440/Food-Website" class="project-link"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
