--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="project-icon">
                         <i class="fas fa-running"></i>
                     </div>
-                    <h3>Unity Platformer Game</h3>
+                    <h3>FireFly Forest</h3>
                     <p>A complete 2D platformer game developed in Unity with custom character design, level design, and game mechanics. Designed and created all visual assets including characters, environments, and UI elements.</p>
                     <div class="project-tech">
                         <span>Unity</span>
@@ -160,10 +160,7 @@
                         <span>Digital Art</span>
                         <span>Level Design</span>
                     </div>
-                    <div class="project-links">
-                        <a href="YOUR_WEBGL_GAME_URL_HERE" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                        <a href="YOUR_GITHUB_REPO_URL_HERE" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
-                    </div>
+
                 </div>
                 <div class="project-cards">
                     <div class="project-icon">
@@ -196,7 +193,6 @@
                         <span>HTML/CSS</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                         <a href="https://github.com/Scrappy440/Food-Website" class="project-link"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
