--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                     <div class="project-links">
                         <a href="https://drain-3m4t.onrender.com/progress" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                         <a href="https://github.com/bcsanadi/drAIn" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/watch?v=2n-E4Uhwtcs" target="_blank" class="project-link"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="project-cards">
